# water_your_plant_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  agent_code.md  pyproject.toml
data/: garden.json
src/garden_agent/: __init__.py  config.py  main.py
src/garden_agent/adapters/: __init__.py
src/garden_agent/adapters/garden/: __init__.py  json_repo.py
src/garden_agent/adapters/llm/: __init__.py  claude.py
src/garden_agent/adapters/weather/: __init__.py  openweather.py
src/garden_agent/application/: tools.py  watering_planner.py
src/garden_agent/domain/: models.py  services.py
src/garden_agent/ports/: garden.py  llm.py  weather.py
tests/: conftest.py
tests/integration/: __init__.py  test_openweather.py
tests/unit/: test_main.py
tests/unit/adapters/: __init__.py  test_claude_adapter.py  test_json_repo.py  test_openweather.py
tests/unit/application/: test_planner.py  test_planner_with_llm.py
tests/unit/domain/: test_models.py  test_services.py
