[project]
name = "water-your-plant-agent"
version = "0.1.0"
description = "Agent project for watering a home garden"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.109.1",
  "httpx>=0.28.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
  "mypy>=2.1.0",
  "pre-commit>=3.7.0",
  "pytest>=8.2.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Domain models are pinned to `(str, Enum)` in the spec — don't auto-rewrite to StrEnum.
"src/garden_agent/domain/models.py" = ["UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: end-to-end tests that hit real external services (skipped in CI)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garden_agent"]
